--- a/style.scss
+++ b/style.scss
@@ -7,18 +7,17 @@
 // Variables //
 $font-color-white: #FFF;
 $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-$font-family-baloo: "Madimi One, sans-serif;";
+$font-family-madimi: "Madimi One, sans-serif";
 $font-family-arvo: "Arvo", serif;
 $base-font-size: 1rem; 
 $heading-font-size: 3.125rem; 
 $kontakt-font-size: 1.875rem; 
 
 // Mixin //
-@mixin text-style($font-family, $font-size, $font-weight: 400) {
+@mixin text-style($font-size, $font-weight: 400) {
   color: $font-color-white;
   text-align: center;
   text-shadow: $text-shadow;
-  font-family: $font-family;
   font-size: $font-size;
   font-weight: $font-weight;
   font-style: normal;
@@ -78,7 +77,7 @@ body {
           a.nav_text {
             text-decoration: none; 
             color: $font-color-white; 
-            font-family: $font-family-baloo;
+            font-family: $font-family-madimi;
             font-weight: 700; 
             font-size: $heading-font-size;
             text-shadow: $text-shadow;
@@ -88,10 +87,11 @@ body {
     }
       .footer_text {
         margin-top: 10%;
-        margin-left: 35%;
+        margin-left: 30%;
         position: absolute;
         z-index: 3;
-        @include text-style($font-family-arvo, $kontakt-font-size);
+        font-family: $font-family-arvo;
+        @include text-style($kontakt-font-size);
       }
 
         .orange_form {
@@ -101,28 +101,27 @@ body {
     }
   }
 
-                                      // Underside 2 //
+                                      // Underside 1 og 2 //
 
 // Variables //
 $background-color: #FFCC19;
 $text-color: #000;
 $text-color-white: #FFF;
-$box_color: white;
-$font-family-baloo: "Baloo Bhai 2", sans-serif;
-$font-family-arvo: "Arvo", serif;
+$box_color: #FFF;
+$font-family-madimi: "Madimi One, sans-serif";
+$font-family-arvo:"Arvo", serif;;
 $font-size: 1.875rem;
 $font-weight-bold: 700;
 $font-weight-normal: 400;
 $line-height: 2.1875rem;
 $border-radius: 3rem;
 $info-width: 32.6875rem;
-$info-height-s: 14.4375rem; 
-$info-height-l: 24.6875rem; 
+$info-height-s: 16rem; 
+$info-height-l: 27rem; 
 
 // Mixins //
 @mixin text-style($weight: $font-weight-normal) {
   color: $text-color;
-  font-family: $font-family-baloo;
   font-size: $font-size;
   font-style: normal;
   font-weight: $weight;
@@ -186,10 +185,12 @@ header,
 
 .h2_traning {
   @include text-style($font-weight-bold);
+  font-family: $font-family-arvo;
 }
 
 .p_traning {
   @include text-style;
+  font-family: $font-family-arvo;
 }
 
 .footer_text_2 {
@@ -206,13 +207,12 @@ header,
 @media screen and (max-width: 820px) { 
 
   // Variables //
-$heading-font-size: 2.125rem; 
-$kontakt-font-size: 875rem; 
 
   .container {
   background-image: url(alvan-nee-T-0EW-SEbsE-unsplash.jpg);
   width: 100vw;
   height: 100vh;
+  align-items: center
   }
 
   .container .main_info .orange_form {
@@ -262,13 +262,13 @@ $kontakt-font-size: 875rem;
 
 .info_text.info_text, .info_text_k.info_text {
   width: 22.6875rem;
-  height: 13.4375rem;
+  height: 15rem;
   padding: 4%;
 }
 
 .info_text.info_text_k, .info_text_k.info_text_k {
   width: 22.6875rem;
-  height: 24.6875rem;
+  height: 28rem;
   padding: 4%;
 }
 
@@ -358,6 +358,12 @@ figure {
   grid-template-columns: 1fr;
   gap: 0%;
   justify-items: center;
+}
+
+.container .main_info .footer_text {
+  margin-top: 3%;
+  margin-left: 4%;
+  font-size: 1.2rem;
 }
 
 }
